test/spec_vectors/simd_load_extend/fail/module_11.wat
(module (memory 0) (func $v128.load32x2_s-arg-empty (result v128) (v128.load32x2_s)))